[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/UI/SmelterDialog.gd" type="Script" id=1]

[node name="SmelterDialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 100.0
offset_right = -100.0
offset_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
offset_right = 1720.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
offset_right = 1676.0
offset_bottom = 40.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer2"]
offset_left = 1680.0
offset_right = 1720.0
offset_bottom = 40.0
custom_minimum_size = Vector2( 40, 40 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 44.0
offset_right = 1720.0
offset_bottom = 456.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
offset_right = 570.0
offset_bottom = 412.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
offset_right = 570.0
offset_bottom = 14.0
text = "Smelter Input"

[node name="InputInventory" type="ItemList" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
offset_top = 18.0
offset_right = 570.0
offset_bottom = 412.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
offset_left = 574.0
offset_right = 1145.0
offset_bottom = 412.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
offset_right = 571.0
offset_bottom = 14.0
text = "Smelter Recipe"

[node name="RecipeList" type="ItemList" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
offset_top = 18.0
offset_right = 571.0
offset_bottom = 412.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
offset_left = 1149.0
offset_right = 1720.0
offset_bottom = 412.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
offset_right = 571.0
offset_bottom = 14.0
text = "Smelter Output"

[node name="OutputInventory" type="ItemList" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
offset_top = 18.0
offset_right = 571.0
offset_bottom = 412.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
offset_top = 460.0
offset_right = 1720.0
offset_bottom = 464.0

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer"]
offset_top = 468.0
offset_right = 1720.0
offset_bottom = 880.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer4"]
offset_right = 1720.0
offset_bottom = 14.0
text = "Player Inventory"

[node name="PlayerInventory" type="ItemList" parent="VBoxContainer/VBoxContainer4"]
offset_top = 18.0
offset_right = 1720.0
offset_bottom = 412.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Button" to="." method="_on_Button_pressed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/VBoxContainer3/InputInventory" to="." method="_on_InputInventory_item_selected"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/VBoxContainer2/RecipeList" to="." method="_on_RecipeList_item_selected"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/VBoxContainer/OutputInventory" to="." method="_on_OutputInventory_item_selected"]
[connection signal="item_selected" from="VBoxContainer/VBoxContainer4/PlayerInventory" to="." method="_on_PlayerInventory_item_selected"]
